--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ##SERVICE_NAME##-service
+  name: ##SERVICE_NAME##-svc
   namespace: ##SERVICE_NAMESPACE##
   labels: 
     app: ##SERVICE_NAME##
