retrieving endpoint by tg app

--- a/src/TG.Configs.Api/appsettings.Debug.json
+++ b/src/TG.Configs.Api/appsettings.Debug.json
@@ -13,5 +13,8 @@
     },
     "JwtTokenOptions": {
         "Audience": "dev-tg-api.somniumgame.com"
+    },
+    "InternalUrls": {
+        "Manager": "http://localhost:61005/internal/manager-service"
     }
 }
