--- a/src/TG.Configs.Api/appsettings.json
+++ b/src/TG.Configs.Api/appsettings.json
@@ -11,5 +11,8 @@
     "Secret": "",
     "PublicKey": "",
     "Issuer": "auth"
+  },
+  "InternalUrls": {
+    "Manager": "http://manager-service-svc/internal/manager-service"
   }
 }
