--- a/src/TG.Configs.Api/appsettings.Debug.json
+++ b/src/TG.Configs.Api/appsettings.Debug.json
@@ -9,7 +9,7 @@
     "ConnectionStrings": {
         "Db": "Server=localhost;Username=postgres;Database={db};Port=5432;Password=123456;",
         "KeyVault": "https://eastus2-dev-tg-kv.vault.azure.net/",
-        "ServiceBus": "sb://eastus2-debug-tg-sb-namespace.servicebus.windows.net"
+        "Redis": "localhost"
     },
     "JwtTokenOptions": {
         "Audience": "dev-tg-api.somniumgame.com"
